--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -12,5 +12,6 @@
     {% endif %}
     <p><strong>Stock:</strong> {{ product.stock }}</p>
     <p>{{ product.description }}</p>
-    <a href="{% url 'product_list' %}" class="btn">Back to Products</a>
+    <a href="{% url 'main:show_main' %}" style="display:inline-block; padding:6px 10px; background:#007bff; color:white; border-radius:5px; text-decoration:none;">
+    Back to Products </a>
 {% endblock %}
