--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -17,7 +17,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-md-0 align-items-center">
         {% if user.is_authenticated %}
           <li class="nav-item me-2 text-end">
-            <div class="small">Hi, <strong>{{ username }}</strong></div>
+            <div class="small">Hi, <strong>{{ user }}</strong></div>
             <div class="small text-muted">{{ last_login }}</div>
           </li>
           <li class="nav-item">
